--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>1.5.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
