Routing Access OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,17 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=Notes
 server.port=8082
 
+###########################################################################
+## Okta Security config
+###########################################################################
+okta.oauth2.client-id=0oa3ezo4ffvboaPNd5d7
+okta.oauth2.client-secret=EU2WcXYkzpyRtKTEB0OnaycsdW2ReQQ4O1bU7nCi
+okta.oauth2.issuer=https://dev-49078090.okta.com/oauth2/default
+
+#spring.security.oauth2.client.registration.okta.client-id=0oa3ew6ezprPo4GzL5d7
+#spring.security.oauth2.client.registration.okta.client-secret=gO0L1WvnDv5_Ytf8sXxB-7uz3y1J1iv2-iYrIVSm
+#spring.security.oauth2.client.registration.okta.authorization-grant-type=client_credentials
+#spring.security.oauth2.client.registration.okta.scope=patientfornote
+#spring.security.oauth2.client.provider.okta.token-uri=https://dev-49078090.okta.com/oauth2/default/v1/token
+#spring.main.web-application-type=none
 
